# dpc-analysis-preprocessing-2022

./: .gitignore  00_prefecture_region.py  01_preprocessing.py  02_import_data_to_db.py  03_read_test.py  README.md  env.sh  main.py  pyproject.toml
input/2022/: DataSource.txt  施設概要表.xlsx  総務省県二次医療圏市町村.csv  診断群分類（DPC) 電子点数表.xlsx  （２）MDC別医療機関別件数（割合）.xlsx  （８）疾患別手術別集計_施設類型別.xlsx
manual_check/: DPC調査manual_check.xlsx
package/: myfunc.py
