[tool.poetry]
name = "dpc-analysis-preprocessing"
version = "0.1.0"
description = ""
authors = ["akira1744 <akr1744@gmail.com>"]
readme = "README.md"
packages = [{include = "dpc_analysis_preprocessing"}]

[tool.poetry.dependencies]
python = "3.9.18"
pandas = "1.3.5"
altair = "4.2.0"
toolz = "0.11.1"
numpy = "1.20.3"
protobuf = "3.20.0"
click = "7.1.2"
streamlit = "1.3.1"
openpyxl = "3.1.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "6.29.3"
black = "21.12b0"
ruff = "0.1.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
